[M107 Merge] Welcome WebUI: Prevent background from overlapping text
(cherry picked from commit 52330277e88250a9893a16a2fd526d3f39beb0a7)

Fixed: 1366307
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3911343
Commit-Queue: John Lee <johntlee@chromium.org>
Cr-Original-Commit-Position: refs/heads/main@{#1049927}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3915921
Auto-Submit: John Lee <johntlee@chromium.org>
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/5304@{#210}
Cr-Branched-From: 5d7b1fc9cb7103d9c82eed647cf4be38cf09738b-refs/heads/main@{#1047731}

--- a/chrome/browser/resources/welcome/shared/splash_pages_shared.css
+++ b/chrome/browser/resources/welcome/shared/splash_pages_shared.css
@@ -27,6 +27,8 @@
   display: flex;
   flex-basis: 45vh;
   flex-direction: column;
+  /* Put the text above the onboarding-background. */
+  z-index: 1;
 }
 
 .header {
